<package format="2">
  <name>moveit_msgs</name>
  <version>0.11.1</version>
  <description>Messages, services and actions used by MoveIt</description>
  <author email="isucan@google.com">Ioan Sucan</author>
  <author email="sachinc@sri.com">Sachin Chitta</author>

  <maintainer email="dave@dav.ee">Dave Coleman</maintainer>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <maintainer email="me@v4hn.de">Michael Goerner</maintainer>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I. Y. Saito</maintainer>

  <license>BSD</license>  
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_msgs/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>octomap_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>object_recognition_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
