<package>
  <name>moveit_msgs</name>
  <version>0.3.8</version>
  <description>Messages, services and actions used by MoveIt</description>
  <author email="isucan@willowgarage.edu">Ioan Sucan</author>
  <author email="sachinc@willowgarage.edu">Sachin Chitta</author>
  <author email="gjones@willowgarage.edu">Gil Jones</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>  
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-msgs/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-msgs</url>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>

  <run_depend>langs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>octomap_msgs</run_depend>

</package>
